1998-09-02  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-data.el (ew-search-sticked-eword): New function.
	(ew-separate-eword): Use `ew-search-sticked-eword' to
	check `ew-permit-null-encoded-text', `ew-ignore-75bytes-limit',
	`ew-permit-sticked-comment' and `ew-permit-sticked-special'.

1998-09-02  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-data.el (ew-separate-eword): Remove
	`ew-permit-null-encoded-text' checking.

	* ew-quote.el (ew-quote-concat): Use `ew-encoded-word-regexp'
	instead of `ew-encoded-word-regexp0'.
	(ew-quote-sole): Ditto.

	* ew-var.el (ew-encoded-text-regexp): Reverted.
	(ew-encoded-text-regexp0): Abolished
	(ew-encoded-text-regexp1): Abolished
	(ew-encoded-word-regexp): Reverted.
	(ew-encoded-word-regexp0): Abolished
	(ew-encoded-word-regexp1): Abolished
	(ew-anchored-encoded-word-regexp): Use `ew-encoded-word-regexp'.
	(ew-type2-regexp): Use `ew-encoded-word-regexp'.

1998-09-01  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Add a notice about null encoded-text.

	* ew-dec.el (ew-decode-field-test): Reorder options.

1998-09-01  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Add 16 tests.

	* ew-data.el (ew-separate-eword): Check
	`ew-permit-null-encoded-text'.

	* ew-quote.el (ew-quote-concat): Use `ew-encoded-word-regexp0'
	instead of `ew-encoded-word-regexp'.
	(ew-quote-sole): Ditto.

	* ew-var.el (ew-encoded-text-regexp): Abolished.
	(ew-encoded-text-regexp0): Renamed from `ew-encoded-text-regexp'.
	(ew-encoded-text-regexp1): New constant.
	(ew-encoded-word-regexp): Abolished.
	(ew-encoded-word-regexp0): Renamed from `ew-encoded-word-regexp'.
	(ew-encoded-word-regexp1): New constant.
	(ew-anchored-encoded-word-regexp): Use `ew-encoded-word-regexp0'.
	(ew-type2-regexp): Use `ew-encoded-word-regexp0'.

1998-09-01  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up with flim-1_9_1.

	* mime-def.el (mime-library-version-string): bump up to
	FLAM-DOODLE 1.9.2.

1998-08-28  Tanaka Akira      <akr@jaist.ac.jp>
